--- a/index.html
+++ b/index.html
@@ -1,40 +1,36 @@
-<script type="module">
-  import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.module.js';
-  import { OrbitControls } from 'https://cdn.jsdelivr.net/npm/three@0.152.2/examples/jsm/controls/OrbitControls.js';
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>College 3D Navigation System</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <label for="start-select">Start:</label>
+<select id="start-select">
+  <option value="Science Block">Science Block</option>
+  <option value="Library">Library</option>
+  <option value="Admin Office">Admin Office</option>
+</select>
 
-  console.log("Inline script running");
 
-  const container = document.getElementById('three-container');
-  const scene = new THREE.Scene();
+<label for="end-select">End:</label>
+<select id="end-select">
+  <option value="Science Block">Science Block</option>
+  <option value="Library">Library</option>
+  <option value="Admin Office">Admin Office</option>
+</select>
 
-  const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
-  camera.position.z = 5;
 
-  const renderer = new THREE.WebGLRenderer();
-  renderer.setSize(window.innerWidth, window.innerHeight);
-  container.appendChild(renderer.domElement);
+<button id="find-path">Find Path</button>
 
-  const controls = new OrbitControls(camera, renderer.domElement);
-  controls.enableDamping = true;
 
-  const geometry = new THREE.BoxGeometry();
-  const material = new THREE.MeshBasicMaterial({ color: 0x00ff00 });
-  const cube = new THREE.Mesh(geometry, material);
-  scene.add(cube);
-
-  window.addEventListener('resize', () => {
-    camera.aspect = window.innerWidth/window.innerHeight;
-    camera.updateProjectionMatrix();
-    renderer.setSize(window.innerWidth, window.innerHeight);
-  });
-
-  function animate() {
-    requestAnimationFrame(animate);
-    console.log("Animating...");
-    cube.rotation.x += 0.01;
-    cube.rotation.y += 0.01;
-    controls.update();
-    renderer.render(scene, camera);
-  }
-  animate();
-</script>
+  <h1>College 3D Navigation System</h1>
+  <input type="text" id="search-input" placeholder="Search buildings..." style="margin: 10px; padding: 5px; width: 200px;">
+  <div id="three-container"></div>
+  <div id="info-box" style="position: fixed; top: 10px; right: 10px; background: #eee; padding: 10px; border-radius: 5px; display: none;"></div>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/controls/OrbitControls.min.js"></script>
+  <script src="script.js"></script>
+</body>
+</html>
